--- a/.github/workflows/03-core-features--05-environment-variables.yaml
+++ b/.github/workflows/03-core-features--05-environment-variables.yaml
@@ -3,10 +3,11 @@ on:
   workflow_dispatch:
 env:
   WORKFLOW_VAR: I_AM_WORKFLOW_SCOPED
+  os: ubuntu-24.04
 
 jobs:
   job-1:
-    runs-on: ubuntu-24.04
+    runs-on: $os
     env:
       JOB_VAR: I_AM_JOB_1_SCOPED
     steps:
@@ -25,7 +26,7 @@ jobs:
           echo "STEP_VAR:     ${STEP_VAR:-<UNSET>}"  # not set here
 
   job-2:
-    runs-on: ubuntu-24.04
+    runs-on: $os
     steps:
       - name: Inspect scopes job 2 step 2
         run: |
