--- a/.github/workflows/03-core-features--05-environment-variables.yaml
+++ b/.github/workflows/03-core-features--05-environment-variables.yaml
@@ -7,7 +7,7 @@ env:
 
 jobs:
   job-1:
-    runs-on: $os
+    runs-on: ${{ env.os }}
     env:
       JOB_VAR: I_AM_JOB_1_SCOPED
     steps:
@@ -26,7 +26,7 @@ jobs:
           echo "STEP_VAR:     ${STEP_VAR:-<UNSET>}"  # not set here
 
   job-2:
-    runs-on: $os
+    runs-on: ${{ env.os }}
     steps:
       - name: Inspect scopes job 2 step 2
         run: |
