Rename variables to delibrate their usage and scope.

--- a/.github/workflows/03-core-features--06-passing-data.yaml
+++ b/.github/workflows/03-core-features--06-passing-data.yaml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-24.04
 
     outputs:
-      foo: ${{ steps.generate-foo.outputs.foo }}
+      foor: ${{ steps.generate-foo.outputs.fooe }}
     steps:
       - name: Generate and export foo
         id: generate-foo
@@ -15,7 +15,7 @@ jobs:
           foo=bar
 
           # 1) Step output (for job output)
-          echo "foo=${foo}" >> "$GITHUB_OUTPUT"
+          echo "fooe=${foo}" >> "$GITHUB_OUTPUT"
 
           # 2) Job-scoped environment variable
           echo "FOO=${foo}" >> "$GITHUB_ENV"
@@ -23,7 +23,7 @@ jobs:
       - name: Inspect values inside producer
         run: |
           echo "FOO (set via GITHUB_ENV):   $FOO"
-          echo "foo (step output):          ${{ steps.generate-foo.outputs.foo }}"
+          echo "fooe (step output):          ${{ steps.generate-foo.outputs.fooe }}"
 
   consumer:
     runs-on: ubuntu-24.04
@@ -31,5 +31,5 @@ jobs:
     steps:
       - name: Inspect values inside consumer (note FOO is unset)
         run: |
-          echo "Value from producer:        ${{ needs.producer.outputs.foo }}"
+          echo "Value from producer:        ${{ needs.producer.outputs.foor }}"
           echo "FOO in consumer:            ${FOO:-<UNSET>}"
